[package]
edition = "2021"
name = "win-active-app-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
winreg = "0.52.0"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[dependencies.windows]
version = "0.52"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[build-dependencies]
napi-build = "2.0.1"
