[package]
edition = "2021"
name = "win-active-app-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = { version = "2.12.2", default-features = false }
pelite = "0.10.0"
base64 = "0.21.7"

[dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem"
]

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[build-dependencies]
napi-build = "2.0.1"
